--- a/AiReview.CodeLens.Vsix/AiReview.CodeLens.Vsix.csproj
+++ b/AiReview.CodeLens.Vsix/AiReview.CodeLens.Vsix.csproj
@@ -60,9 +60,14 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CodeLens\IAiReviewService.cs" />
+    <Compile Include="CodeLens\Provider\TimeBasedCache.cs" />
     <Compile Include="CodeLens\UI\ViewElementFactory.cs" />
     <Compile Include="CodeLens\Provider\CodeLensDataPoint.cs" />
     <Compile Include="CodeLens\Provider\CodeLensDataPointProvider.cs" />
+    <Compile Include="CodeLens\VisualStudio\CodeLensCallbackService.cs" />
+    <Compile Include="CodeLens\VisualStudio\SaveCommandHandler.cs" />
+    <Compile Include="CodeLens\VisualStudio\VsExtensions.cs" />
     <Compile Include="Command1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CodeLensPackage.cs" />
@@ -131,6 +136,7 @@
       <IncludeOutputGroupsInVSIXLocalOnly>DebugSymbolsProjectOutputGroup%3b</IncludeOutputGroupsInVSIXLocalOnly>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
