--- a/AiReview.CodeLens.Vsix/AiReview.CodeLens.Vsix.csproj
+++ b/AiReview.CodeLens.Vsix/AiReview.CodeLens.Vsix.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Bulb\TestSuggestedActionsSourceProvider.cs" />
     <Compile Include="Bulb\TestSuggestedActionsSource.cs" />
     <Compile Include="Bulb\UpperCaseSuggestedAction.cs" />
+    <Compile Include="ChatLanguageModel.cs" />
     <Compile Include="CodeLens\BetterNaming\BetterNamingPoint.cs" />
     <Compile Include="CodeLens\Ext.cs" />
     <Compile Include="CodeLens\IAiReviewService.cs" />
@@ -82,8 +83,10 @@
     <Compile Include="CodeLens\VisualStudio\SaveCommandHandler.cs" />
     <Compile Include="CodeLens\VisualStudio\VsExtensions.cs" />
     <Compile Include="Command1.cs" />
+    <Compile Include="General.cs" />
+    <Compile Include="LuminaCodePackage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CodeLensPackage.cs" />
+    <Compile Include="OptionsProvider.cs" />
     <Compile Include="source.extension.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -113,6 +116,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Community.VisualStudio.Toolkit.17">
+      <Version>17.0.533</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.12.40392" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
